@@ -1,4 +1,6 @@
 HEAD
+	+ Fixed s4sync's breakage when tries to sync serviceprincipals to
+	  OpenLDAP. Those users are ignored on EBox::LDB::users method
 	+ User profiles are only created if the OpenLDAP sync exists, otherwise,
 	  defer it until s4sync does the synchronization
 	+ Typo fix in netbios validation
